tree-sitter-gmat/test/corpus/assignment.txt
================================================================================
assignment: plain field
================================================================================

DefaultProp.Type = RungeKutta89;

--------------------------------------------------------------------------------

(source_file
  (assignment_command
    left: (member_expression
      object: (identifier)
      property: (identifier))
    right: (identifier)))

================================================================================
assignment: optional GMAT keyword
================================================================================

GMAT Sat.X = 7000;

--------------------------------------------------------------------------------

(source_file
  (assignment_command
    left: (member_expression
      object: (identifier)
      property: (identifier))
    right: (number)))

================================================================================
assignment: command label without GMAT keyword
================================================================================

'Save RAAN' RAAN = MoonSat.RAAN;

--------------------------------------------------------------------------------

(source_file
  (assignment_command
    label: (command_label)
    left: (identifier)
    right: (member_expression
      object: (identifier)
      property: (identifier))))

================================================================================
assignment: GMAT keyword with command label
================================================================================

GMAT 'Compute Cost' J = 0;

--------------------------------------------------------------------------------

(source_file
  (assignment_command
    label: (command_label)
    left: (identifier)
    right: (number)))

================================================================================
assignment: array-indexed target
================================================================================

A(1,1) = 0.5;

--------------------------------------------------------------------------------

(source_file
  (assignment_command
    left: (call_expression
      function: (identifier)
      arguments: (argument_list
        (number)
        (number)))
    right: (number)))

================================================================================
assignment: deep member path
================================================================================

FM.GravityField.Earth.PotentialFile = 'JGM2.cof';

--------------------------------------------------------------------------------

(source_file
  (assignment_command
    left: (member_expression
      object: (member_expression
        object: (member_expression
          object: (identifier)
          property: (identifier))
        property: (identifier))
      property: (identifier))
    right: (string)))

================================================================================
assignment: no trailing semicolon
================================================================================

Sat1Id = 'Sat1'

--------------------------------------------------------------------------------

(source_file
  (assignment_command
    left: (identifier)
    right: (string)))
