tree-sitter-gmat/test/corpus/create.txt
================================================================================
create: single resource
================================================================================

Create Spacecraft Sat;

--------------------------------------------------------------------------------

(source_file
  (create_command
    type: (identifier)
    name: (identifier)))

================================================================================
create: multiple names
================================================================================

Create Variable x y z;

--------------------------------------------------------------------------------

(source_file
  (create_command
    type: (identifier)
    name: (identifier)
    name: (identifier)
    name: (identifier)))

================================================================================
create: no trailing semicolon
================================================================================

Create String ReportName

--------------------------------------------------------------------------------

(source_file
  (create_command
    type: (identifier)
    name: (identifier)))

================================================================================
create: comma-separated names
================================================================================

Create Variable SECONDS_PER_DAY, RTD;
Create String s1, s2

--------------------------------------------------------------------------------

(source_file
  (create_command
    type: (identifier)
    name: (identifier)
    name: (identifier))
  (create_command
    type: (identifier)
    name: (identifier)
    name: (identifier)))

================================================================================
create: generic type (unknown resource parses without a grammar change)
================================================================================

Create EclipseLocator MyLocator;

--------------------------------------------------------------------------------

(source_file
  (create_command
    type: (identifier)
    name: (identifier)))

================================================================================
create: array declaration carries its size
================================================================================

Create Array A[3,3];

--------------------------------------------------------------------------------

(source_file
  (create_command
    type: (identifier)
    name: (identifier)
    (array_size
      (number)
      (number))))

================================================================================
create: multiple sized arrays
================================================================================

Create Array R1[1,3] R2[1,3] V2[1,3];

--------------------------------------------------------------------------------

(source_file
  (create_command
    type: (identifier)
    name: (identifier)
    (array_size
      (number)
      (number))
    name: (identifier)
    (array_size
      (number)
      (number))
    name: (identifier)
    (array_size
      (number)
      (number))))

================================================================================
create: declaration followed by an unbraced assignment (newline is layout)
================================================================================

Create Variable x
x = 5

--------------------------------------------------------------------------------

(source_file
  (create_command
    type: (identifier)
    name: (identifier))
  (assignment_command
    left: (identifier)
    right: (number)))
