tree-sitter-gmat/test/corpus/include.txt
================================================================================
include: with trailing semicolon
================================================================================

#Include '../SupportFiles/Ex_EphemerisCompareGeneric.script';

--------------------------------------------------------------------------------

(source_file
  (include
    path: (string)))

================================================================================
include: without trailing semicolon
================================================================================

#Include './SupportFiles/Ex_IncludeFile.script'

--------------------------------------------------------------------------------

(source_file
  (include
    path: (string)))
