tree-sitter-gmat/test/corpus/layout.txt
================================================================================
comments: leading, trailing, and blank lines attach as layout
================================================================================

% leading comment

Create Spacecraft Sat; % trailing comment

--------------------------------------------------------------------------------

(source_file
  (comment)
  (create_command
    type: (identifier)
    name: (identifier))
  (comment))

================================================================================
line continuation: ... before a newline continues a statement
================================================================================

RF.Add = {a, ...
    b, c}

--------------------------------------------------------------------------------

(source_file
  (assignment_command
    left: (member_expression
      object: (identifier)
      property: (identifier))
    right: (list
      (identifier)
      (identifier)
      (identifier))))
