tree-sitter-gmat/test/corpus/scaffold.txt
================================================================================
scaffold: bare identifiers
================================================================================

Sat Earth Luna

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (identifier)
  (identifier))

================================================================================
scaffold: comments attach as interstitial text
================================================================================

% a leading comment
Sat % a trailing comment

--------------------------------------------------------------------------------

(source_file
  (comment)
  (identifier)
  (comment))
