tree-sitter-gmat/test/corpus/values.txt
================================================================================
number: integer, real, and scientific forms
================================================================================

a = 7000
b = 1.25e-1
c = 1e+70
d = 0.001

--------------------------------------------------------------------------------

(source_file
  (assignment_command
    left: (identifier)
    right: (number))
  (assignment_command
    left: (identifier)
    right: (number))
  (assignment_command
    left: (identifier)
    right: (number))
  (assignment_command
    left: (identifier)
    right: (number)))

================================================================================
number: zero-padded exponent (corpus quirk)
================================================================================

a = 1e+070
b = 9.999999999999999e-012
c = 2.287982201885771e-015

--------------------------------------------------------------------------------

(source_file
  (assignment_command
    left: (identifier)
    right: (number))
  (assignment_command
    left: (identifier)
    right: (number))
  (assignment_command
    left: (identifier)
    right: (number)))

================================================================================
string: single-quoted, and a percent sign inside is data not a comment
================================================================================

epoch = '01 Jan 2025 12:00:00.000'
fmt = '%.15f %.15f %.15f'

--------------------------------------------------------------------------------

(source_file
  (assignment_command
    left: (identifier)
    right: (string))
  (assignment_command
    left: (identifier)
    right: (string)))

================================================================================
unary: leading sign
================================================================================

a = -Element1
b = -3.5e-012

--------------------------------------------------------------------------------

(source_file
  (assignment_command
    left: (identifier)
    right: (unary_expression
      operand: (identifier)))
  (assignment_command
    left: (identifier)
    right: (unary_expression
      operand: (number))))

================================================================================
binary: arithmetic precedence (multiplication binds tighter than addition)
================================================================================

a = b + c * 2

--------------------------------------------------------------------------------
